--- a/sapphire/datReader/CMakeLists.txt
+++ b/sapphire/datReader/CMakeLists.txt
@@ -16,4 +16,8 @@ else()
     target_link_libraries( xivdat PUBLIC zlib1 )
 endif()
 target_include_directories( xivdat PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} )
-cotire( xivdat )
+
+if(Cotire_ENABLED)
+	message( "Cotire enabled for xivdat" )
+	cotire( xivdat )
+endif()
